--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.21.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"@vercel/analytics": "^1.4.1",
 		"axios": "^1.7.7",
 		"cheerio": "^1.0.0",
 		"lucide-svelte": "^0.460.1"
